crates/ts-pack-core-ffi/include/ts_pack.h

typedef struct TS_PACKDownloadManager TS_PACKDownloadManager;
typedef struct TS_PACKLanguage TS_PACKLanguage;
typedef struct TS_PACKLanguageRegistry TS_PACKLanguageRegistry;
typedef struct TS_PACKPackConfig TS_PACKPackConfig;
typedef struct TS_PACKParser TS_PACKParser;
typedef struct TS_PACKParserManifest TS_PACKParserManifest;
typedef struct TS_PACKProcessConfig TS_PACKProcessConfig;
typedef struct TS_PACKProcessResult TS_PACKProcessResult;
typedef struct TS_PACKTree TS_PACKTree;
char *ts_pack_process_result_to_json(const TS_PACKProcessResult *ptr);
void ts_pack_process_result_free(TS_PACKProcessResult *ptr);
TS_PACKPackConfig *ts_pack_pack_config_from_json(const char *json);
char *ts_pack_pack_config_to_json(const TS_PACKPackConfig *ptr);
void ts_pack_pack_config_free(TS_PACKPackConfig *ptr);
TS_PACKPackConfig *ts_pack_pack_config_from_toml_file(const char *path);
TS_PACKPackConfig *ts_pack_pack_config_discover(void);
TS_PACKProcessConfig *ts_pack_process_config_from_json(const char *json);
char *ts_pack_process_config_to_json(const TS_PACKProcessConfig *ptr);
void ts_pack_process_config_free(TS_PACKProcessConfig *ptr);
TS_PACKProcessConfig *ts_pack_process_config_default(void);
TS_PACKProcessConfig *ts_pack_process_config_with_chunking(TS_PACKProcessConfig *this_,
                                                           uintptr_t max_size);
TS_PACKProcessConfig *ts_pack_process_config_all(TS_PACKProcessConfig *this_);
TS_PACKProcessConfig *ts_pack_process_config_minimal(TS_PACKProcessConfig *this_);
void ts_pack_language_registry_free(TS_PACKLanguageRegistry *ptr);
TS_PACKLanguageRegistry *ts_pack_language_registry_with_libs_dir(const char *libs_dir);
void ts_pack_language_registry_add_extra_libs_dir(const TS_PACKLanguageRegistry *this_,
                                                  const char *dir);
TS_PACKLanguage *ts_pack_language_registry_get_language(const TS_PACKLanguageRegistry *this_,
                                                        const char *name);
char *ts_pack_language_registry_available_languages(const TS_PACKLanguageRegistry *this_);
int32_t ts_pack_language_registry_has_language(const TS_PACKLanguageRegistry *this_,
                                               const char *name);
uintptr_t ts_pack_language_registry_language_count(const TS_PACKLanguageRegistry *this_);
TS_PACKProcessResult *ts_pack_language_registry_process(const TS_PACKLanguageRegistry *this_,
                                                        const char *source,
                                                        const TS_PACKProcessConfig *config);
TS_PACKLanguageRegistry *ts_pack_language_registry_default(void);
char *ts_pack_parser_manifest_to_json(const TS_PACKParserManifest *ptr);
void ts_pack_parser_manifest_free(TS_PACKParserManifest *ptr);
void ts_pack_download_manager_free(TS_PACKDownloadManager *ptr);
TS_PACKDownloadManager *ts_pack_download_manager_new(const char *version);
TS_PACKDownloadManager *ts_pack_download_manager_with_cache_dir(const char *version,
                                                                const char *cache_dir);
char *ts_pack_download_manager_default_cache_dir(const char *version);
char *ts_pack_download_manager_cache_dir(const TS_PACKDownloadManager *this_);
char *ts_pack_download_manager_installed_languages(const TS_PACKDownloadManager *this_);
int32_t ts_pack_download_manager_ensure_languages(const TS_PACKDownloadManager *this_,
                                                  const char *names);
void ts_pack_language_free(TS_PACKLanguage *ptr);
void ts_pack_parser_free(TS_PACKParser *ptr);
void ts_pack_tree_free(TS_PACKTree *ptr);
char *ts_pack_detect_language_from_extension(const char *ext);
char *ts_pack_detect_language_from_path(const char *path);
char *ts_pack_detect_language_from_content(const char *content);
char *ts_pack_get_highlights_query(const char *language);
char *ts_pack_get_injections_query(const char *language);
char *ts_pack_get_locals_query(const char *language);
TS_PACKLanguage *ts_pack_get_language(const char *name);
TS_PACKParser *ts_pack_get_parser(const char *name);
char *ts_pack_detect_language(const char *path);
char *ts_pack_available_languages(void);
int32_t ts_pack_has_language(const char *name);
uintptr_t ts_pack_language_count(void);
TS_PACKProcessResult *ts_pack_process(const char *source,
                                      const TS_PACKProcessConfig *config);
int32_t ts_pack_init(const TS_PACKPackConfig *config);
int32_t ts_pack_configure(const TS_PACKPackConfig *config);
uintptr_t ts_pack_download(const char *names);
uintptr_t ts_pack_download_all(void);
char *ts_pack_manifest_languages(void);
char *ts_pack_downloaded_languages(void);
int32_t ts_pack_clean_cache(void);
char *ts_pack_cache_dir(void);