packages/csharp/TreeSitterLanguagePack/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:b78f78a868f5b990044d2fcebcf2684dd9b7280f8707ee9be705b3dac5639fff
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace TreeSitterLanguagePack;

internal static partial class NativeMethods
{
    private const string LibName = "ts_pack_core_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_free")]
    internal static extern void DownloadManagerFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_free")]
    internal static extern void LanguageFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_free")]
    internal static extern void LanguageRegistryFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_parser_free")]
    internal static extern void ParserFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_tree_free")]
    internal static extern void TreeFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_pack_config_from_json")]
    internal static extern IntPtr PackConfigFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_pack_config_free")]
    internal static extern void PackConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_from_json")]
    internal static extern IntPtr ProcessConfigFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_free")]
    internal static extern void ProcessConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_pack_config_to_json")]
    internal static extern IntPtr PackConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_parser_manifest_to_json")]
    internal static extern IntPtr ParserManifestToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_parser_manifest_free")]
    internal static extern void ParserManifestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_to_json")]
    internal static extern IntPtr ProcessConfigToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_result_to_json")]
    internal static extern IntPtr ProcessResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_result_free")]
    internal static extern void ProcessResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_detect_language_from_extension")]
    internal static extern IntPtr DetectLanguageFromExtension(
        [MarshalAs(UnmanagedType.LPStr)] string ext
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_detect_language_from_path")]
    internal static extern IntPtr DetectLanguageFromPath(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_detect_language_from_content")]
    internal static extern IntPtr DetectLanguageFromContent(
        [MarshalAs(UnmanagedType.LPStr)] string content
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_get_highlights_query")]
    internal static extern IntPtr GetHighlightsQuery(
        [MarshalAs(UnmanagedType.LPStr)] string language
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_get_injections_query")]
    internal static extern IntPtr GetInjectionsQuery(
        [MarshalAs(UnmanagedType.LPStr)] string language
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_get_locals_query")]
    internal static extern IntPtr GetLocalsQuery(
        [MarshalAs(UnmanagedType.LPStr)] string language
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_get_language")]
    internal static extern IntPtr GetLanguage(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_get_parser")]
    internal static extern IntPtr GetParser(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_detect_language")]
    internal static extern IntPtr DetectLanguage(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_available_languages")]
    internal static extern IntPtr AvailableLanguages();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_has_language")]
    internal static extern int HasLanguage(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_count")]
    internal static extern ulong LanguageCount();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process")]
    internal static extern IntPtr Process(
        [MarshalAs(UnmanagedType.LPStr)] string source,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_init")]
    internal static extern void Init(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_configure")]
    internal static extern void Configure(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download")]
    internal static extern ulong Download(
        IntPtr names
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_all")]
    internal static extern ulong DownloadAll();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_manifest_languages")]
    internal static extern IntPtr ManifestLanguages();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_downloaded_languages")]
    internal static extern IntPtr DownloadedLanguages();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_clean_cache")]
    internal static extern void CleanCache();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_cache_dir")]
    internal static extern IntPtr CacheDir();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_pack_config_from_toml_file")]
    internal static extern IntPtr PackConfigFromTomlFile(
        [MarshalAs(UnmanagedType.LPStr)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_pack_config_discover")]
    internal static extern IntPtr PackConfigDiscover();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_default")]
    internal static extern IntPtr ProcessConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_with_chunking")]
    internal static extern IntPtr ProcessConfigWithChunking(
        IntPtr handle,
        ulong maxSize
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_all")]
    internal static extern IntPtr ProcessConfigAll(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_process_config_minimal")]
    internal static extern IntPtr ProcessConfigMinimal(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_with_libs_dir")]
    internal static extern IntPtr LanguageRegistryWithLibsDir(
        [MarshalAs(UnmanagedType.LPStr)] string libsDir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_add_extra_libs_dir")]
    internal static extern void LanguageRegistryAddExtraLibsDir(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string dir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_get_language")]
    internal static extern IntPtr LanguageRegistryGetLanguage(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_available_languages")]
    internal static extern IntPtr LanguageRegistryAvailableLanguages(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_has_language")]
    internal static extern int LanguageRegistryHasLanguage(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_language_count")]
    internal static extern ulong LanguageRegistryLanguageCount(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_process")]
    internal static extern IntPtr LanguageRegistryProcess(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string source,
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_language_registry_default")]
    internal static extern IntPtr LanguageRegistryDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_new")]
    internal static extern IntPtr DownloadManagerNew(
        [MarshalAs(UnmanagedType.LPStr)] string version
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_with_cache_dir")]
    internal static extern IntPtr DownloadManagerWithCacheDir(
        [MarshalAs(UnmanagedType.LPStr)] string version,
        [MarshalAs(UnmanagedType.LPStr)] string cacheDir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_default_cache_dir")]
    internal static extern IntPtr DownloadManagerDefaultCacheDir(
        [MarshalAs(UnmanagedType.LPStr)] string version
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_cache_dir")]
    internal static extern IntPtr DownloadManagerCacheDir(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_installed_languages")]
    internal static extern IntPtr DownloadManagerInstalledLanguages(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ts_pack_download_manager_ensure_languages")]
    internal static extern void DownloadManagerEnsureLanguages(
        IntPtr handle,
        IntPtr names
    );
